--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -186,6 +186,17 @@
 			<version>2.5.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.trigersoft</groupId>
+			<artifactId>jaque</artifactId>
+			<version>2.1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.ow2.asm</groupId>
+			<artifactId>asm</artifactId>
+			<version>5.0.3</version>
+		</dependency>
+
 		<!-- spark rest framework -->
 		<dependency>
 			<groupId>com.sparkjava</groupId>
