--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -11,9 +11,9 @@ service.persistence.mapdb.filepath=/var/tmp/spot-core.mapdb
 
 #hibernate
 # END WARNING
-service.persistence.hibernate.show_sql=true
+service.persistence.hibernate.show_sql=false
 service.persistence.hibernate.format_sql=true
-service.persistence.hibernate.hbm2ddl.auto=create
+service.persistence.hibernate.hbm2ddl.auto=create-drop
 service.persistence.hibernate.enable_lazy_load_no_trans=true
 
 #JDBC configuration, used by JPA and JDO persistence
