implemented fetch subgraph functionality for queries

--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -11,7 +11,7 @@ service.persistence.mapdb.filepath=/var/tmp/spot-core.mapdb
 
 #hibernate
 # END WARNING
-service.persistence.hibernate.show_sql=false
+service.persistence.hibernate.show_sql=true
 service.persistence.hibernate.format_sql=true
 service.persistence.hibernate.hbm2ddl.auto=create-drop
 service.persistence.hibernate.enable_lazy_load_no_trans=true
@@ -25,7 +25,6 @@ database.jdbc.url=jdbc:hsqldb:file:/var/tmp/spot-core.db
 database.jdbc.username=sa
 database.jdbc.password=
 
-
 #MYSQL
 # WARNING: never use MyISAM tables as then transactions don't work
 #service.persistence.hibernate.dialect.storage_engine=innodb
@@ -34,6 +33,11 @@ database.jdbc.password=
 #database.jdbc.url=jdbc:mysql://localhost/spot?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&reateDatabaseIfNotExist=true
 #database.jdbc.username=root
 #database.jdbc.password=
+
+# HIBERNATE
+hibernate.cache.use_second_level_cache=true
+hibernate.cache.use_query_cache=true
+hibernate.cache.region.factory_class=ehcache
 
 
 init.default.admin.username=admin
