--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -11,16 +11,16 @@ service.persistence.mapdb.filepath=/var/tmp/spot-core.mapdb
 
 #hibernate
 # END WARNING
-service.persistence.hibernate.show_sql=true
+service.persistence.hibernate.show_sql=false
 service.persistence.hibernate.format_sql=true
-service.persistence.hibernate.hbm2ddl.auto=create-drop
+service.persistence.hibernate.hbm2ddl.auto=validate
 service.persistence.hibernate.enable_lazy_load_no_trans=true
 
 #JDBC configuration, used by JPA and JDO persistence
 #HSQL
 service.persistence.hibernate.dialect.storage_engine=
 service.persistence.hibernate.dialect=org.hibernate.dialect.HSQLDialect
-database.jdbc.driverClassName=org.hsqldb.jdbcDriver
+database.jdbc.driverClassName=org.hsqldb.jdbc.JDBCDriver
 database.jdbc.url=jdbc:hsqldb:file:/var/tmp/spot-core.db
 database.jdbc.username=sa
 database.jdbc.password=
