--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -13,7 +13,7 @@ service.persistence.mapdb.filepath=/var/tmp/spot-core.mapdb
 # END WARNING
 service.persistence.hibernate.show_sql=false
 service.persistence.hibernate.format_sql=true
-service.persistence.hibernate.hbm2ddl.auto=validate
+service.persistence.hibernate.hbm2ddl.auto=none
 service.persistence.hibernate.enable_lazy_load_no_trans=true
 
 #JDBC configuration, used by JPA and JDO persistence
