--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -23,6 +23,7 @@
 				<version>1.0-SNAPSHOT</version>
 				<executions>
 					<execution>
+						<id>Item type generation</id>
 						<phase>generate-sources</phase>
 						<goals>
 							<goal>itemTypeGeneration</goal>
@@ -31,41 +32,64 @@
 				</executions>
 			</plugin>
 
-			<!-- packaging -->
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.1.1</version>
-				<configuration>
-					<transformers>
-						<transformer
-							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-							<manifestEntries>
-								<Main-Class>at.spot.core.infrastructure.init.Bootstrap</Main-Class>
-							</manifestEntries>
-						</transformer>
-						<transformer
-							implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-							<resource>META-INF/spring.handlers</resource>
-						</transformer>
-						<transformer
-							implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-							<resource>META-INF/spring.schemas</resource>
-						</transformer>
-					</transformers>
-				</configuration>
+				<groupId>at.spot</groupId>
+				<artifactId>spot-core-maven-plugins</artifactId>
+				<version>1.0-SNAPSHOT</version>
 				<executions>
 					<execution>
-						<phase>package</phase>
+						<id>Item type post-processing</id>
+						<phase>process-classes</phase>
 						<goals>
-							<goal>shade</goal>
+							<goal>transform</goal>
 						</goals>
 						<configuration>
-							<outputFile>${project.build.directory}/${project.artifactId}-${project.version}-fat.jar</outputFile>
+							<includeJars>false</includeJars>
+							<classFileTransformers>
+								<classFileTransformer>
+									at.spot.core.persistence.instrumentation.transformers.JpaEntityClassTransformer
+								</classFileTransformer>
+							</classFileTransformers>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
+
+			<!-- packaging -->
+<!-- 			<plugin> -->
+<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
+<!-- 				<artifactId>maven-shade-plugin</artifactId> -->
+<!-- 				<version>3.1.1</version> -->
+<!-- 				<configuration> -->
+<!-- 					<transformers> -->
+<!-- 						<transformer -->
+<!-- 							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer"> -->
+<!-- 							<manifestEntries> -->
+<!-- 								<Main-Class>at.spot.core.infrastructure.init.Bootstrap</Main-Class> -->
+<!-- 							</manifestEntries> -->
+<!-- 						</transformer> -->
+<!-- 						<transformer -->
+<!-- 							implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer"> -->
+<!-- 							<resource>META-INF/spring.handlers</resource> -->
+<!-- 						</transformer> -->
+<!-- 						<transformer -->
+<!-- 							implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer"> -->
+<!-- 							<resource>META-INF/spring.schemas</resource> -->
+<!-- 						</transformer> -->
+<!-- 					</transformers> -->
+<!-- 				</configuration> -->
+<!-- 				<executions> -->
+<!-- 					<execution> -->
+<!-- 						<phase>package</phase> -->
+<!-- 						<goals> -->
+<!-- 							<goal>shade</goal> -->
+<!-- 						</goals> -->
+<!-- 						<configuration> -->
+<!-- 							<outputFile>${project.build.directory}/${project.artifactId}-${project.version}-fat.jar</outputFile> -->
+<!-- 						</configuration> -->
+<!-- 					</execution> -->
+<!-- 				</executions> -->
+<!-- 			</plugin> -->
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
