--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -140,6 +140,11 @@
 
 		<!-- -->
 		<dependency>
+			<groupId>com.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>4.2</version>
+		</dependency>
+		<dependency>
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
 			<version>1.4</version>
