more work on the impex import and type system infos

--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -65,6 +65,21 @@
 							</classFileTransformers>
 						</configuration>
 					</execution>
+					<execution>
+						<id>Item type post-processing</id>
+						<phase>process-test-classes</phase>
+						<goals>
+							<goal>transform</goal>
+						</goals>
+						<configuration>
+							<includeJars>false</includeJars>
+							<classFileTransformers>
+								<classFileTransformer>
+									at.spot.core.infrastructure.instrumentation.JpaEntityClassTransformer
+								</classFileTransformer>
+							</classFileTransformers>
+						</configuration>
+					</execution>
 				</executions>
 			</plugin>
 
