alot of refactoring regarding impex and persistence mapping

--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -11,7 +11,7 @@ service.persistence.mapdb.filepath=/var/tmp/spot-core.mapdb
 
 #hibernate
 # END WARNING
-service.persistence.hibernate.show_sql=false
+service.persistence.hibernate.show_sql=true
 service.persistence.hibernate.format_sql=true
 service.persistence.hibernate.hbm2ddl.auto=none
 service.persistence.hibernate.enable_lazy_load_no_trans=true
@@ -20,19 +20,19 @@ service.persistence.hibernate.enable_lazy_load_no_trans=true
 #HSQL
 service.persistence.hibernate.dialect.storage_engine=
 service.persistence.hibernate.dialect=org.hibernate.dialect.HSQLDialect
-database.jdbc.driverClassName=org.hsqldb.jdbc.JDBCDriver
-database.jdbc.url=jdbc:hsqldb:file:/var/tmp/spot-core.db
-database.jdbc.username=sa
-database.jdbc.password=
+#database.jdbc.driverClassName=org.hsqldb.jdbc.JDBCDriver
+#database.jdbc.url=jdbc:hsqldb:file:/var/tmp/spot-core.db
+#database.jdbc.username=sa
+#database.jdbc.password=
 
 #MYSQL
 # WARNING: never use MyISAM tables as then transactions don't work
-#service.persistence.hibernate.dialect.storage_engine=innodb
-#service.persistence.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-#database.jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-#database.jdbc.url=jdbc:mysql://localhost/spot?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&reateDatabaseIfNotExist=true
-#database.jdbc.username=root
-#database.jdbc.password=
+service.persistence.hibernate.dialect.storage_engine=innodb
+service.persistence.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+database.jdbc.driverClassName=com.mysql.cj.jdbc.Driver
+database.jdbc.url=jdbc:mysql://localhost/spot?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&reateDatabaseIfNotExist=true
+database.jdbc.username=root
+database.jdbc.password=
 
 # HIBERNATE
 hibernate.cache.use_second_level_cache=true
