--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -66,7 +66,7 @@
 						</configuration>
 					</execution>
 					<execution>
-						<id>Item type post-processing</id>
+						<id>Item type post-processing (test)</id>
 						<phase>process-test-classes</phase>
 						<goals>
 							<goal>transform</goal>
