added users sample data

--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -11,7 +11,7 @@ service.persistence.mapdb.filepath=/var/tmp/spot-core.mapdb
 
 #hibernate
 # END WARNING
-service.persistence.hibernate.show_sql=true
+service.persistence.hibernate.show_sql=false
 service.persistence.hibernate.format_sql=true
 service.persistence.hibernate.hbm2ddl.auto=none
 service.persistence.hibernate.enable_lazy_load_no_trans=true
