impex refactoring and implemented "remove"

--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -32,7 +32,7 @@ hibernate.cache.region.factory_class=ehcache
 
 # JDBC configuration, used by JPA and JDO persistence
 # HSQL
-service.persistence.hibernate.dialect.storage_engine=
+#service.persistence.hibernate.dialect.storage_engine=
 #service.persistence.hibernate.dialect=org.hibernate.dialect.HSQLDialect
 #database.jdbc.driverClassName=org.hsqldb.jdbc.JDBCDriver
 #database.jdbc.url=jdbc:hsqldb:file:/var/tmp/spot-core.db
