--- a/spot-core-maven-plugins/pom.xml
+++ b/spot-core-maven-plugins/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>spot-core-maven-plugins</artifactId>
-	<name>spOt core maven plugins</name>
+	<artifactId>spot-maven-plugin</artifactId>
+	<name>spOt maven plugins</name>
 	<packaging>maven-plugin</packaging>
 
 	<parent>
@@ -16,11 +16,11 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-plugin-plugin</artifactId>
-				<version>3.5.1</version>
+				<version>3.5.2</version>
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
-					<skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
+					<skipErrorNoDescriptorsFound>false</skipErrorNoDescriptorsFound>
 				</configuration>
 			</plugin>
 		</plugins>
