--- a/spot-maven-plugin/.project
+++ b/spot-maven-plugin/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>spot-core-maven-plugins</name>
+	<name>spot-maven-plugin</name>
 	<comment>NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
 	<projects>
 		<project>spot-core-model-infrastructure</project>
