--- a/spot-commerce-spring-base/pom.xml
+++ b/spot-commerce-spring-base/pom.xml
@@ -23,7 +23,7 @@
                     <execution>
                         <phase>generate-sources</phase>
                         <goals>
-                            <goal>itemTypeGeneration</goal>
+                            <goal>generate-types</goal>
                         </goals>
                     </execution>
                 </executions>
