boot param flag fixes

--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -4,11 +4,12 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=INFO
 
 # SPOT
-# INITIALIZATION
-core.setup.typesystem.initialize = false
-core.setup.typesystem.update = false
-core.setup.import.initialdata = false
-core.setup.import.sampledata = false
+# SETUP flags, can also be passed via command line
+#core.setup.typesystem.initialize = false
+#core.setup.typesystem.update = false
+#core.setup.typesystem.clean = false
+#core.setup.import.initialdata = false
+#core.setup.import.sampledata = false
 
 spot.core.version=1.0-beta
 i18n.default.locale=en_EN
