test logging reduced, small fixes

--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -1,6 +1,6 @@
 # LOGGING
 logging.level.at.spot.core.persistence.instrumentation=WARN
-logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=INFO
 
 # SPOT
