--- a/spot-core/src/main/resources/core-testing.properties
+++ b/spot-core/src/main/resources/core-testing.properties
@@ -6,9 +6,16 @@ core.setup.typesystem.update = false
 core.setup.import.initialdata = true
 core.setup.import.sampledata = true
 
+# logging
+logging.level.at.spot.core=WARN
+logging.level.spark=WARN
+logging.level.hsqldb.db=WARN
+logging.level.org.eclipse.jetty=WARN
+logging.level.org.apache.commons=WARN
+
 # hibernate
-service.persistence.hibernate.show_sql=true
-service.persistence.hibernate.format_sql=true
+service.persistence.hibernate.show_sql=false
+service.persistence.hibernate.format_sql=false
 
 # JDBC configuration, used by JPA and JDO persistence
 # HSQL
