--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -1,7 +1,8 @@
 # LOGGING
-logging.level.at.spot.core.persistence.instrumentation=WARN
-logging.level.org.springframework.web=INFO
-logging.level.org.hibernate=INFO
+logging.level.at.spot.core.=WARN
+logging.level.at.spot.core.persistence.=INFO
+logging.level.org.springframework.web.=INFO
+logging.level.org.hibernate.=INFO
 
 # SPOT
 # SETUP flags, can also be passed via command line
