--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -1,8 +1,9 @@
 # LOGGING
-logging.level.at.spot.core.=WARN
-logging.level.at.spot.core.persistence.=INFO
-logging.level.org.springframework.web.=INFO
-logging.level.org.hibernate.=INFO
+logging.level.root=INFO
+logging.level.at.spot.core=WARN
+logging.level.at.spot.core.persistence=INFO
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=INFO
 
 # SPOT
 # SETUP flags, can also be passed via command line
