--- a/spot-core/src/main/resources/core-testing.properties
+++ b/spot-core/src/main/resources/core-testing.properties
@@ -19,9 +19,9 @@ service.persistence.hibernate.format_sql=false
 
 # JDBC configuration, used by JPA and JDO persistence
 # HSQL
-service.persistence.hibernate.dialect.storage_engine=
-service.persistence.hibernate.dialect=org.hibernate.dialect.HSQLDialect
-database.jdbc.driverClassName=org.hsqldb.jdbc.JDBCDriver
-database.jdbc.url=jdbc:hsqldb:file:/var/tmp/spot-core_testing.db
-database.jdbc.username=sa
-database.jdbc.password=
+#service.persistence.hibernate.dialect.storage_engine=
+#service.persistence.hibernate.dialect=org.hibernate.dialect.HSQLDialect
+#database.jdbc.driverClassName=org.hsqldb.jdbc.JDBCDriver
+#database.jdbc.url=jdbc:hsqldb:file:/var/tmp/spot-core_testing.db
+#database.jdbc.username=sa
+#database.jdbc.password=
