--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -13,14 +13,13 @@ logging.level.org.hibernate=INFO
 #core.setup.import.initialdata = false
 #core.setup.import.sampledata = false
 
-spot.core.version=1.0-beta
-i18n.default.locale=en_EN
+spot.core.version=1.0-SNAPSHOT
+i18n.default.locale=en_GB
 init.default.admin.username=admin
 # the password is MD5 hashed, you can use any hashing method here, but make sure that you configure/implement the correct PasswordEncryptionStrategy 
 init.default.admin.password=MD5:ee10c315eba2c75b403ea99136f5b48d
 
 service.typesystem.rest.port=19000
-service.persistence.mapdb.filepath=/var/tmp/spot-core.mapdb
 
 # HIBERNATE
 service.persistence.hibernate.show_sql=false
@@ -38,7 +37,7 @@ hibernate.cache.region.factory_class=ehcache
 service.persistence.hibernate.dialect.storage_engine=
 service.persistence.hibernate.dialect=org.hibernate.dialect.HSQLDialect
 database.jdbc.driverClassName=org.hsqldb.jdbc.JDBCDriver
-database.jdbc.url=jdbc:hsqldb:file:/var/tmp/spot-core.db
+database.jdbc.url=jdbc:hsqldb:file:data/store/spot-core.db
 database.jdbc.username=sa
 database.jdbc.password=
 
