--- a/spot-core/src/main/resources/local.properties.template
+++ b/spot-core/src/main/resources/local.properties.template
@@ -1,17 +1,28 @@
-#hibernate
-# WARNING: never use MyISAM tables as then transactions don't work
-service.persistence.hibernate.dialect.storage_engine=innodb
-service.persistence.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-# END WARNING
-service.persistence.hibernate.show_sql=true
+# HIBERNATE
+service.persistence.hibernate.show_sql=false
 service.persistence.hibernate.format_sql=true
-service.persistence.hibernate.hbm2ddl.auto=update
+service.persistence.hibernate.hbm2ddl.auto=none
 service.persistence.hibernate.enable_lazy_load_no_trans=true
 
+# HIBERNATE CHACING
+hibernate.cache.use_second_level_cache=true
+hibernate.cache.use_query_cache=true
+hibernate.cache.region.factory_class=ehcache
 
-#MYSQL
-database.jdbc.driverClassName=com.mysql.jdbc.Driver
-database.jdbc.url=jdbc:mysql://localhost/spot?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-database.jdbc.username=root
+# JDBC configuration, used by JPA and JDO persistence
+# HSQL
+service.persistence.hibernate.dialect.storage_engine=
+service.persistence.hibernate.dialect=org.hibernate.dialect.HSQLDialect
+database.jdbc.driverClassName=org.hsqldb.jdbc.JDBCDriver
+database.jdbc.url=jdbc:hsqldb:file:data/store/spot-core.db
+database.jdbc.username=sa
 database.jdbc.password=
 
+# MYSQL
+# WARNING: never use MyISAM tables as then transactions don't work
+#service.persistence.hibernate.dialect.storage_engine=innodb
+#service.persistence.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#database.jdbc.driverClassName=com.mysql.cj.jdbc.Driver
+#database.jdbc.url=jdbc:mysql://localhost/spot?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&reateDatabaseIfNotExist=true
+#database.jdbc.username=root
+#database.jdbc.password=
