--- a/spot-core-shell/pom.xml
+++ b/spot-core-shell/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 
 	<properties>
-		<spring.shell.version>1.2.1.BUILD-SNAPSHOT</spring.shell.version>
+		<spring.shell.version>2.0.0.RELEASE</spring.shell.version>
 	</properties>
 
 	<dependencies>
@@ -27,7 +27,7 @@
 		<!-- spring shell -->
 		<dependency>
 			<groupId>org.springframework.shell</groupId>
-			<artifactId>spring-shell</artifactId>
+			<artifactId>spring-shell-starter</artifactId>
 			<version>${spring.shell.version}</version>
 		</dependency>
 	</dependencies>
