--- a/spot-instrumentation/pom.xml
+++ b/spot-instrumentation/pom.xml
@@ -3,7 +3,7 @@
                              http://maven.apache.org/maven-v4_0_0.xsd">
 	<groupId>at.spot</groupId>
 	<artifactId>spot-instrumentation</artifactId>
-	<version>1.0.SNAPSHOT</version>
+	<version>1.0-SNAPSHOT</version>
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>jar</packaging>
 
