--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                              http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>at.spot</groupId>
 	<artifactId>spot-framework</artifactId>
-	<version>1.0</version>
+	<version>1.1-SNAPSHOT</version>
 	<name>spOt framework</name>
 	<packaging>pom</packaging>
 	<description>The spOt framework parent project</description>
@@ -12,7 +12,7 @@
 		<url>https://github.com/mojo2012/spot-framework</url>
 		<connection>scm:git:https://github.com/mojo2012/spot-framework.git</connection>
 		<developerConnection>scm:git:https://github.com/mojo2012/spot-framework.git</developerConnection>
-	  <tag>spot-framework-1.0</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<licenses>
@@ -262,7 +262,7 @@
 					<dependency>
 						<groupId>at.spot</groupId>
 						<artifactId>build-tools</artifactId>
-						<version>1.0</version>
+						<version>1.1-SNAPSHOT</version>
 					</dependency>
 				</dependencies>
 			</plugin>
