--- a/spot-core-shell/pom.xml
+++ b/spot-core-shell/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>at.spot</groupId>
 		<artifactId>spot-framework</artifactId>
-		<version>1.0</version>
+		<version>1.1-SNAPSHOT</version>
 	</parent>
 
 	<properties>
@@ -15,12 +15,12 @@
 		<dependency>
 			<groupId>at.spot</groupId>
 			<artifactId>spot-core</artifactId>
-			<version>1.0</version>
+			<version>1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>at.spot</groupId>
 			<artifactId>spot-core-model-infrastructure</artifactId>
-			<version>1.0</version>
+			<version>1.1-SNAPSHOT</version>
 		</dependency>
 
 		<!-- spring shell -->
