added autopush feature for release plugin

--- a/pom.xml
+++ b/pom.xml
@@ -343,7 +343,7 @@
 					<autoVersionSubmodules>true</autoVersionSubmodules>
 					<tagNameFormat>release/@{project.artifactId}-@{project.version}</tagNameFormat>
 					<branchName>master</branchName>
-					<pushChanges>false</pushChanges>
+					<pushChanges>true</pushChanges>
 					<localCheckout>true</localCheckout>
 				</configuration>
 			</plugin>
