--- a/spot-cms-base/pom.xml
+++ b/spot-cms-base/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>at.spot</groupId>
         <artifactId>spot-framework</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0-beta1</version>
     </parent>
 
     <build>
@@ -14,7 +14,7 @@
             <plugin>
                 <groupId>at.spot</groupId>
                 <artifactId>spot-maven-plugin</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <version>1.0-beta1</version>
                 <executions>
                     <execution>
                         <phase>generate-sources</phase>
@@ -113,7 +113,7 @@
         <dependency>
             <groupId>at.spot</groupId>
             <artifactId>spot-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0-beta1</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
