--- a/spot-core-model-infrastructure/pom.xml
+++ b/spot-core-model-infrastructure/pom.xml
@@ -6,21 +6,21 @@
 	<parent>
 		<groupId>at.spot</groupId>
 		<artifactId>spot-framework</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.0-beta1</version>
 	</parent>
 
 	<dependencies>
 		<dependency>
 			<groupId>at.spot</groupId>
 			<artifactId>spot-core-support</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.0-beta1</version>
 		</dependency>
 
 		<!-- dynamic load time weaving support -->
 		<dependency>
 			<groupId>at.spot</groupId>
 			<artifactId>spot-instrumentation</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.0-beta1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.javassist</groupId>
