--- a/spot-core-support/pom.xml
+++ b/spot-core-support/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>at.spot</groupId>
 		<artifactId>spot-framework</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.0-beta1</version>
 	</parent>
 
 	<build>
