--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>at.spot</groupId>
 		<artifactId>spot-framework</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.0-beta1</version>
 	</parent>
 
 	<properties>
@@ -40,7 +40,7 @@
 			<plugin>
 				<groupId>at.spot</groupId>
 				<artifactId>spot-maven-plugin</artifactId>
-				<version>1.0-SNAPSHOT</version>
+				<version>1.0-beta1</version>
 				<executions>
 					<execution>
 						<id>Item type generation</id>
@@ -207,17 +207,17 @@
 		<dependency>
 			<groupId>at.spot</groupId>
 			<artifactId>spot-core-model-infrastructure</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.0-beta1</version>
 		</dependency>
 		<dependency>
 			<groupId>at.spot</groupId>
 			<artifactId>spot-core-base-models</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.0-beta1</version>
 		</dependency>
 		<dependency>
 			<groupId>at.spot</groupId>
 			<artifactId>spot-core-support</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.0-beta1</version>
 		</dependency>
 
 		<!-- -->
