--- a/spot-maven-plugin/pom.xml
+++ b/spot-maven-plugin/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>at.spot</groupId>
 		<artifactId>spot-framework</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.0-beta1</version>
 	</parent>
 
 	<build>
@@ -29,7 +29,7 @@
 		<dependency>
 			<groupId>at.spot</groupId>
 			<artifactId>spot-core-model-infrastructure</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.0-beta1</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.aspectj</groupId>
